// Copyright (c) Ultraviolet
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package agent;

option go_package = "./agent";

service AgentService {
  rpc Run(RunRequest) returns (RunResponse) {}
  rpc Algo(AlgoRequest) returns (AlgoResponse) {}
  rpc Data(DataRequest) returns (DataResponse) {}
  rpc Result(ResultRequest) returns (ResultResponse) {}
  rpc Attestation(AttestationRequest) returns (AttestationResponse) {}
}

message RunRequest { ComputationReq computation = 1; }

message RunResponse { string Computation = 1; }

message AlgoRequest {
  bytes algorithm = 1;
  string provider = 2;
  string id = 3;
}

message AlgoResponse { string algorithmID = 1; }

message DataRequest {
  bytes dataset = 1;
  string provider = 2;
  string id = 3;
}

message DataResponse { string datasetID = 1; }

message ResultRequest {
  string consumer = 1;
}

message ResultResponse { bytes file = 1; }

message AttestationRequest { }

message AttestationResponse { bytes file = 1; }

message ComputationReq {
  string id = 1;
  string name = 2;
  string description = 3;
  string owner = 5;
  repeated DatasetReq datasets = 8;
  repeated AlgorithmReq algorithms = 9;
  repeated string result_consumers = 10;
  string timeout = 13;
}

message DatasetReq {
  string provider = 1;
  string id = 2;
}

message AlgorithmReq {
  string provider = 1;
  string id = 2;
}
